--- a/C#/DataStructrue.Test/DataStructrue.Test.csproj
+++ b/C#/DataStructrue.Test/DataStructrue.Test.csproj
@@ -23,6 +23,7 @@
   <ItemGroup>
     <ProjectReference Include="..\1.链表\链表\链表.csproj" />
     <ProjectReference Include="..\2.栈\栈\栈.csproj" />
+    <ProjectReference Include="..\3.队列\队列\队列.csproj" />
   </ItemGroup>
 
 </Project>
