--- a/C#/算法/1.排序算法/排序算法/排序算法.csproj
+++ b/C#/算法/1.排序算法/排序算法/排序算法.csproj
@@ -7,4 +7,9 @@
     <OutputType>Exe</OutputType>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="10.桶排序" />
+    <Folder Include="9.基数排序" />
+  </ItemGroup>
+
 </Project>
