--- a/C#/图/图.csproj
+++ b/C#/图/图.csproj
@@ -5,4 +5,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\并查集\并查集.csproj" />
+    </ItemGroup>
+
 </Project>
